# rainymodel

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  render.yaml
app/: analytics.py  dashboard.py  main.py  routing.py  sso_auth.py
config/: litellm_config.yaml
docs/: architecture.md  omail-dns-checklist.md  runbook.md  team-onboarding.md
